service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bots-service
spec:
  selector:
    app: bots
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
