route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bots-insecure
spec:
  host: bots.apps.openshift.redcloud.land
  to:
    kind: Service
    name: bots-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
